--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.9",
     "@ngx-translate/core": "^13.0.0",
     "bootstrap": "^4.5.2",
+    "firebase": "^7.18.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
